[Omnibox] fix hover over text and images.

This CL uses CanProcessEventsWithinSubtree to stop enter/exit events to
text and image elements.

Bug: 820892
Change-Id: Ice5adc61ba617db3119eea9a99d10255888aa840
Reviewed-on: https://chromium-review.googlesource.com/962665
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Kevin Bailey <krb@chromium.org>
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543456}
Former-commit-id: 76748b2c1af8f8f04ecb4769a1341e08ee4612dc