chrome/browser/ui/views/omnibox/omnibox_text_view.h
@@ -32,6 +32,7 @@ class OmniboxTextView : public views::View {
 
   // views::View.
   gfx::Size CalculatePreferredSize() const override;
+  bool CanProcessEventsWithinSubtree() const override;
   const char* GetClassName() const override;
   int GetHeightForWidth(int width) const override;
   void OnPaint(gfx::Canvas* canvas) override;
